# controls-middleware-sandbox

./: .gitignore  CMakeLists.txt  makefile
.devcontainer/: devcontainer-lock.json  devcontainer.json
cmake/: format.cmake
include/controls_middleware/: dispatcher.h  logging.h  packet.h
schema/: telemetry.fbs
src/: client.cpp  logging.cpp  main.cpp  server.cpp
src/client/: client.cpp  client.h  main.cpp
src/common/: dispatcher.cpp  logging.cpp
src/server/: main.cpp  server.cpp  server.h
